--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Festejando a conexão da cidade e o campo</h1>
         <img src="sunset-815270_1280.jpg" alt="Foto que em uma parte tem a cidade e outra o campo.">
-        <p>A conexão entre a cidade e o campo gera uma série de impactos significativos, moldando tanto o ambiente rural quanto o urbano.</p>
+        <p>A A interação entre as áreas urbanas e rurais provoca uma série de impactos significativos, moldando profundamente tanto o ambiente campestre quanto o citadino.</p>
         <nav>
             <ul>
                 <li><a href="#problemas">Os Problemas</a></li>
@@ -25,12 +25,14 @@
             <h2>Os problemas</h2>
             <article>
                 <h3>Infraestrutura Deficiente no Campo</h3>
-                <p>Falta de boas estradas, acesso limitado à internet de alta velocidade e carência de serviços básicos (saneamento, saúde, educação) no meio rural dificultam a integração e o desenvolvimento.</p>
+                <p>.A falta de infraestrutura adequada no campo, como estradas de qualidade inferior, acesso restrito à internet de alta velocidade e a escassez de serviços essenciais (saneamento, saúde, educação), prejudica a integração e o progresso rural.
+
+</p>
             </article>
 
             <article>
                 <h3>Êxodo Rural Desordenado</h3>
-                <p>A migração em massa do campo para as cidades, impulsionada pela busca por melhores oportunidades, pode levar ao despovoamento rural e à sobrecarga das infraestruturas urbanas, gerando favelas, desemprego e violência nas cidades.</p>
+                <p>A migração em massa do campo para as cidades, impulsionada pela busca por melhores oportunidades, pode resultar no despovoamento rural e na sobrecarga das infraestruturas urbanas, gerando problemas sociais como a formação de comunidades carentes, desemprego e aumento da criminalidade nos centros urbanos..</p>
             </article>
             <article>
                 <h3>Desigualdades Socioeconômicas</h3>
